--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Global</title>
+  <title>My Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="HTML5 website template">
-  <meta name="keywords" content="global, template, html, sass, jquery">
+  <meta name="keywords" content="My Portfolio, template, html, sass, jquery">
   <meta name="author" content="Bucky Maler">
+  <!-- <script src="https://kit.fontawesome.com/c26b79afd4.js" crossorigin="anonymous"></script> -->
+  <link rel="icon" type="image/x-icon" href="assets/img/introduction-visual.png">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 
+<!-- <i class="fa-solid fa-cubes" style="color: #00004f;"></i> -->
+
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" alt="Global">
-    <p>Global</p>
+    <img src="assets/img/logo.jpg" alt="My Portfolio">
+    <p>My Portfolio</p>
   </a>
-  <p class="device-notification--message">Global has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
+  <p class="device-notification--message">Welcome to my Portfolio :D For a better experience, please orient your device to portrait or find a larger screen. Thank you!</p>
 </div>
 
 <div class="perspective effect-rotate-left">
@@ -27,10 +31,10 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="#0">
-            <img src="assets/img/logo.png" alt="Global">
-            <p>Global</p>
+            <img src="assets/img/logo.png" alt="My Portfolio">
+            <p>My Portfolio</p>
           </a>
-          <button class="header--cta cta">Hire Us</button>
+          <!-- <button class="header--cta cta">Hire Us</button> -->
           <div class="header--nav-toggle">
             <span></span>
           </div>
@@ -38,10 +42,10 @@
         <nav class="l-side-nav">
           <ul class="side-nav">
             <li class="is-active"><span>Home</span></li>
-            <li><span>Works</span></li>
-            <li><span>About</span></li>
+            <li><span>Projects</span></li>
+            <li><span>About me</span></li>
             <li><span>Contact</span></li>
-            <li><span>Hire us</span></li>
+            <!-- <li><span>Hire us</span></li> -->
           </ul>
         </nav>
         <ul class="l-main-content main-content">
@@ -49,14 +53,14 @@
             <div class="intro">
               <div class="intro--banner">
                 <h1>Your next<br>interactive<br>experience</h1>
-                <button class="cta">Hire Us
+                <!-- <button class="cta">Hire Us
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                     <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
                   </g>
                   </svg>
                   <span class="btn-background"></span>
-                </button>
+                </button> -->
                 <img src="assets/img/introduction-visual.png" alt="Welcome">
               </div>
               <div class="intro--options">
@@ -141,7 +145,7 @@
                     </svg>
                   </span>
                 </a>
-                <img src="assets/img/about-visual.png" alt="About Us">
+                <img src="assets/img/about-visual.png" alt="About Me">
               </div>
               <div class="about--options">
                 <a href="#0">
@@ -174,11 +178,11 @@
               </div>
             </div>
           </li>
-          <li class="l-section section">
+          <!-- <li class="l-section section">
             <div class="hire">
-              <h2>You want us to do</h2>
+              <h2>You want us to do</h2> -->
               <!-- checkout formspree.io for easy form setup -->
-              <form class="work-request">
+              <!-- <form class="work-request">
                 <div class="work-request--options">
                   <span class="options-a">
                     <input id="opt-1" type="checkbox" value="app design">
@@ -258,17 +262,17 @@
                 <input type="submit" value="Send Request">
               </form>
             </div>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
   </div>
   <ul class="outer-nav">
     <li class="is-active">Home</li>
-    <li>Works</li>
-    <li>About</li>
+    <li>Projects</li>
+    <li>About me</li>
     <li>Contact</li>
-    <li>Hire us</li>
+    <!-- <li>Hire us</li> -->
   </ul>
 </div>
 
